# WebFileLint

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/checker/: models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/src/checker/migrations/: 0001_initial.py
backend/src/checker/templates/: file_details.html  home.html  login.html  registration.html
backend/src/conf/: celery.py  celery_settings.py  settings.py  urls.py
nginx/: default.conf
